[gd_scene load_steps=3 format=3 uid="uid://citfdnu3wmdyb"]

[ext_resource type="Script" uid="uid://cwv1lrnippq04" path="res://script/add_book_window.gd" id="1_vbyy2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbyy2"]
bg_color = Color(0.9098039, 0.8862745, 0.8392157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 10

[node name="AddBookWindow" type="Window"]
oversampling_override = 1.0
title = "添加书籍"
initial_position = 1
size = Vector2i(500, 512)
script = ExtResource("1_vbyy2")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0040001
offset_bottom = -0.048034668
theme_override_styles/panel = SubResource("StyleBoxFlat_vbyy2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="书籍名称" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "书籍名称："

[node name="NameInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "留空将自动从文件名提取"

[node name="作者名称" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "作者名称："

[node name="AuthorInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "输入作者名称"

[node name="书籍简介" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "书籍简介："

[node name="Introduction" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
placeholder_text = "输入小说简介或描述..."

[node name="书籍分组" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "分组："

[node name="GroupOption" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="书籍文件（必选）" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "书籍文件（必选）："

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="BookPathInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "选择书籍本体文件"

[node name="BtnSelectBook" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "浏览"

[node name="书脊图片（必选）" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "书脊图片（必选）"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="SpinePathInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "选择书脊图片"
editable = false

[node name="BtnSelectSpine" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "浏览"

[node name="封面图片（可选）" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "封面图片（可选）"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="CoverPathInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "选择封面图片"
editable = false

[node name="BtnSelectCover" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "浏览"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnConfirm" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "确认添加"

[node name="FileDialog" type="FileDialog" parent="."]
